# Bingo

./: .gitignore  CMakeLists.txt  config.tpl.json  readme.md
bingo-lib/: main.cpp
cmake/: clang-tidy.cmake
src/: CMakeLists.txt  main.cpp  utils.cpp  utils.hpp
src/bingo/: Bingo.cpp  Bingo.hpp  Board.cpp  Board.hpp  Generator.hpp  Types.hpp  bingo.cpp  bingo.hpp  generator.hpp
src/drawer/: BingoDrawer.cpp  BingoDrawer.hpp
src/parser/: Config.hpp  IParser.hpp  JsonParser.cpp  JsonParser.hpp
test/: AnalysisTest.cpp  CMakeLists.txt  JsonParserTest.cpp  test_utils.cpp  test_utils.hpp
test/bingo/: BingoData.hpp  BingoTest.cpp  BoardTest.cpp
test/data/: multiple.json
